<resources>
    <string name="app_name">StreamApp</string>
    <string name="go_live">Go Live</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="stop">Stop</string>
    <string name="live">LIVE</string>
    <string name="oops">Ooops!</string>
    <string name="no_internet">No Internet connection found</string>
    <string name="network_msg">Connect to the Internet to continue streaming</string>
    <string name="dismiss">Dismiss</string>
    <string name="settings">Settings</string>
    <string name="q1">360p</string>
    <string name="q2">480p</string>
    <string name="q3">720p</string>
    <string name="q4">1080p</string>
    <string name="camera">Camera</string>
    <string name="mic">Microphone</string>
    <string name="auto">Auto Focus</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="muted">Muted</string>
    <string name="unmuted">Unmuted</string>
    <string name="rear">Rear</string>
    <string name="front">Front</string>
    <string name="adaptive">Adaptive Bitrate</string>
    <string name="quality">Quality Settings</string>
    <string name="generic">Generic</string>
    <string name="football">Football</string>
    <string name="basketball">Basketball</string>
    <string name="handball">Handball</string>
    <string name="tennis">Tennis</string>
    <string name="badminton">Badminton</string>
    <string name="table_tennis">Table Tennis</string>
    <string name="boxing">Boxing</string>
    <string name="bowls">Bowls</string>
    <string name="beach_handball">Beach Handball</string>
    <string name="sports">Sport</string>
    <string name="select_sports">Select Sports</string>
    <string name="open">Open scoreboard</string>
    <string name="sets">Sets</string>
    <string name="three">3</string>
    <string name="five">5</string>
    <string name="seven">7</string>

<string-array name="sports">
    <item>Generic</item>
    <item>Football</item>
    <item>Basketball</item>
    <item>Handball</item>
    <item>Tennis</item>
    <item>Badminton</item>
    <item>Table Tennis</item>
    <item>Boxing</item>
    <item>Bowls</item>
    <item>Beach Handball</item>
</string-array>

    <string-array name="quality">
        <item>360p</item>
        <item>480p</item>
        <item>720p</item>
        <item>1080p</item>
    </string-array>
</resources>